fix(test) fixing bugs, sonar